# website

./: .envrc  .eslintignore  .gitignore  .prettierignore  .prettierrc.cjs  Cargo.toml  Makefile  astro.config.mjs  dprint.json  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: cicd.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: dark_mode_toggle.rs  feature_card.rs  footer.rs  index_card.rs  latest_posts.rs  mod.rs  nav.rs  umami.rs
app/src/functions/: dark_mode.rs  mod.rs  posts.rs
app/src/layouts/: default.rs
app/src/providers/: color_scheme.rs
app/src/routes/: idea_page.rs  ideas.rs  index.rs
content/blog/: basic-markdown-style-guide.md  syntax-highlighting.md
content/projects/: design-system-boilerplate.md  dev-landing-page.md
crates/site-app/: Cargo.toml
crates/site-app/src/: error_template.rs  errors.rs  lib.rs
crates/site-app/src/components/: feature_card.rs  footer.rs  mod.rs  nav.rs  umami.rs
crates/site-app/src/functions/: posts.rs
crates/site-app/src/layouts/: default.rs
crates/site-app/src/routes/: ideas.rs  index.rs  mod.rs
crates/site-app/style/: main.scss
crates/site-app/style/tailwind/: tailwind.config.js
crates/site-frontend/: Cargo.toml
crates/site-server/: Cargo.toml
end2end/: playwright.config.ts
end2end/tests/: example.spec.ts
frontend/: Cargo.toml
graphql/: discussions_query.graphql
nix/: cargo-leptos.nix  hooks.nix  site.nix  style-js-deps.nix
server/: Cargo.toml
src/: app.css  app.d.ts  app.html  app.rs  config.ts  dark_mode.rs  error_template.rs  errors.rs  fileserv.rs  lib.rs  main.rs  state.rs
src/components/: AboutTheTheme.astro  BlogPostMeta.astro  CodeBlock.astro  CodePenEmbed.astro  Comment.svelte  Comments.svelte  DarkModeToggle.astro  FeatureCard.svelte  Footer.astro  Footer.svelte  GitHubGistEmbed.astro  Header.astro  HeaderLink.astro  Heading.astro  IndexCard.svelte  Intro.astro  LatestPosts.svelte  MobileMenu.svelte  MostPopular.svelte  Nav.astro  Nav.svelte  NavLink.svelte  PageMeta.astro  Reactions.svelte  Renderer.astro  TweetEmbed.astro  YouTubeEmbed.astro  index_card.rs  latest_posts.rs  mod.rs  nav.rs
src/content/: config.ts
src/content/posts/: welcome-to-site.md
src/layouts/: AboutLayout.astro  ContentLayout.astro  Favicon.astro  FontAwesome.astro  GoogleFont.astro  Layout.astro  PageLayout.astro  default.rs
src/lib/: seo.ts  siteConfig.js
src/lib/markdoc/: frontmatter.schema.ts  markdoc.config.ts  read.ts
src/models/: post.rs
src/pages/: about.md  blog.astro  index.astro  projects.astro  rss.xml.ts
src/pages/posts/: [slug].astro  index.astro
src/routes/: +layout.svelte  +page.svelte  api.rs  homepage.rs  idea_page.rs  ideas.rs  index.rs  mod.rs  story.rs
src/routes/[slug]/: +page.svelte
src/routes/about/: +page.svx
src/routes/blog/: +page.svelte
src/styles/: global.css  style.css  tailwind.css
style/: style.css  tailwind.css
