[package]
name = "brianryall-xyz"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.6.4", optional = true }
axum-extra = {version = "0.5.0", features = ["cookie"]}
cfg-if = "1"
chrono = "0.4.23"
comrak = "0.16.0"
console_error_panic_hook = "0.1"
console_log = "0.2"
estimated_read_time = "1.0.0"
glob = "0.3.1"
gray_matter = "0.2.5"
http = "0.2.9"
# leptos = { git = "https://github.com/polarmutex/leptos", branch = "html-class", default-features = false, features = ["serde"] }
# leptos_actix = { git = "https://github.com/polarmutex/leptos", branch = "html-class", default-features = false, optional = true }
# leptos_meta = { git = "https://github.com/polarmutex/leptos", branch = "html-class", default-features = false }
# leptos_router = { git = "https://github.com/polarmutex/leptos", branch = "html-class", default-features = false }
leptos = { version= "0.3", default-features = false, features = ["serde"] }
leptos_axum = { version = "0.3", optional = true }
leptos_meta = { version = "0.3", default-features = false }
leptos_router = { version = "0.3", default-features = false }
log = "0.4"
serde = "1"
simple_logger = "4"
sitemap = "0.4.1"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.3.5", features = ["fs"], optional = true }
tracing = { version = "0.1.37", optional = true }
viz = { version = "0.4.8", features = ["serve"], optional = true }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3", features = ["AbortController", "AbortSignal", "HtmlDocument"] }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:leptos_axum", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:tracing"]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "brianryall_xyz"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "src/styles/style.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:4000"
# The port to use for automatic reload monitoring
reload-port = 4001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with tha tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = true
