[workspace]
resolver = "2"
members = ["crates/*"]

# only for client-side wasm builds
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[workspace.dependencies]
leptos = { version = "0.6", features = ["nightly", "experimental-islands"] }
leptos_axum = { version = "0.6", features = ["experimental-islands"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }

axum = { version = "0.7.4", features = ["macros", "tracing"] }
color-eyre = "0.6"
console_error_panic_hook = "0.1.7"
console_log = "1"
log = "0.4"
simple_logger = "4.2.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
wasm-bindgen = "=0.2.92"

# axum-extra = { version = "0.7.1", features = ["cookie"] }
# cfg-if = "1.0.0"
# chrono = "0.4.23"
# comrak = "0.16.0"
# estimated_read_time = "1.0.0"
# glob = "0.3.1"
# gray_matter = "0.2.5"
# http = "0.2.9"
# serde = { version = "1.0.158", features = ["derive"] }
# sitemap = "0.4"
# thiserror = "1.0.40"
# web-sys = { version = "0.3.61", features = ["HtmlDocument"] }

[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "brianryall-xyz"

# cache busting for keeping bundles up to date
hash-files = true

bin-package = "site-server"
lib-package = "site-frontend"

site-root = "target/site"
site-pkg-dir = "pkg"

style-file = "crates/site-app/style/main.scss"
assets-dir = "crates/site-app/public"

site-addr = "127.0.0.1:3000"
reload-port = 3001

browserquery = "defaults"

tailwind-input-file = "crates/site-app/style/main.scss"
tailwind-config-file = "crates/site-app/style/tailwind/tailwind.config.js"

# set by cargo-leptos
watch = false
env = "DEV"

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
lib-profile-release = "wasm-release"
