[package]
name = "brianryall-xyz"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["serde", "tracing", "nightly", "experimental-islands", "nonce"] }
leptos_axum = { version = "0.6", features = ["experimental-islands"],  optional = true }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }

axum = { version = "0.7", optional = true }
# axum-extra = { version = "0.9", features = ["cookie"] }
cfg-if = "1"
# chrono = {version="0.4", features=["serde"]}
# color-eyre = "0.6"
# comrak = "0.16"
console_error_panic_hook = "0.1"
console_log = "1"
# glob = "0"
# gray_matter = "0"
graphql_client = { version = "0.14", optional = true }
http = "1"
log = "0.4"
octocrab = { version = "0.38", optional = true }
serde = { version = "1", features = ["derive"] }
simple_logger = "4.2.0"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
# tower-http = { version = "0.4", features = ["compression-gzip", "fs", "trace"], optional = true }
tracing = "0.1"
# tracing-opentelemetry = { version = "0.19.0", optional = true }
# #tracing-futures = { version = "0.2.5", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"], optional = true }
tracing-bunyan-formatter = { version = "0.3", optional = true }
tracing-log = { version = "0.1", optional = true }
tracing-logfmt = { version = "0.3", optional = true }
wasm-bindgen = "=0.2.92"
# web-sys = { version = "0.3.64", features = ["HtmlDocument"] }

# chrono = "0.4.23"
# estimated_read_time = "1.0.0"
# sitemap = "0.4"

[features]
default = ["csr"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "tokio/full",
    "dep:tracing-logfmt",
    "dep:tower",
    "dep:tower-http",
    "dep:octocrab",
    "dep:graphql_client",
    "dep:tracing-subscriber",
    "dep:tracing-bunyan-formatter",
    "dep:tracing-log",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum"
    ]

[package.metadata.cargo-all-features]
denylist = ["axum", "tower", "tower-http", "reqwest", "tokio", "sqlx", "leptos_axum", "femark", "chrono", "argon2","rand", "rand_core", "octocrab"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "brianryall_xyz"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "./styles/output.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
# assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with tha tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
# The tailwind input file.
#
# Optional, Activates the tailwind build
tailwind-input-file = "styles/input.css"

# The profile to use for the bin target when compiling for release
#
# Optional. Defaults to "release".
bin-profile-release = "release"
# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "release-wasm-size"
# The profile to use for the bin target when compiling for release
#
#Optional. Defaults to "dev"
bin-profile-dev = "server-dev"




[profile.release]
opt-level = 3
panic = "unwind"

[profile.release-wasm-size]
inherits = "release"
lto = true
# panic = "abort"
opt-level = 'z'
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 0

[profile.server-dev]
inherits = "dev"
