[package]
name = "site-app"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

# axum.workspace = true
# axum-extra.workspace = true
cfg-if.workspace = true
comrak.workspace = true
glob.workspace = true
gray_matter.workspace = true
http.workspace = true
serde.workspace = true
thiserror.workspace = true
# web-sys.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "leptos/ssr", "leptos/tracing", "leptos_meta/ssr", "leptos_router/ssr",
  "dep:leptos_axum",
]
